@@ -1,1 +1,4 @@
 # concurrent-http-reading
+
+
+java --enable-preview -classpath *:\*\target\classes com.streaming.Main
